# nju-summer-course

./: # AI4SE 期末项目 · 通用要求（所有项目必读）.md  .gitattributes  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml  render.yaml
.github/workflows/: test.yml
arena/kata_assertion/: CONVENTIONS.md  lib.py  test_lib.py
arena/kata_import/: CONVENTIONS.md  lib.py  test_lib.py
arena/kata_logic/: CONVENTIONS.md  lib.py  test_lib.py
arena/kata_syntax/: CONVENTIONS.md  lib.py  test_lib.py
arena/kata_timeout/: CONVENTIONS.md  lib.py  test_lib.py
arena/kata_type/: CONVENTIONS.md  lib.py  test_lib.py
src/harness/: actions.py  cli.py  config.py  context.py  dispatcher.py  guardrail.py  logging.py  loop.py  memory.py  parser.py
src/harness/auth/: cli.py  store.py
src/harness/feedback/: classifier.py  composer.py  parse.py  pipeline.py  runner.py  selfcorrect.py
src/harness/llm/: __init__.py  base.py  deepseek.py  mock.py
tests/: conftest.py  test_actions.py  test_config.py  test_context.py  test_dispatcher.py  test_guardrail.py  test_llm_deepseek.py  test_llm_mock.py  test_logging.py  test_loop.py  test_memory.py  test_memory_compress.py  test_parser.py  test_web_app.py  test_web_ws.py
tests/auth/: test_store.py
tests/demo/: test_mechanism_demo.py
tests/feedback/: test_classifier.py  test_composer.py  test_parse.py  test_pipeline.py  test_runner.py  test_selfcorrect.py  test_signals.py
web/: app.py
