[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-harness"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "keyring>=25", "fastapi>=0.110", "uvicorn>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6", "mypy>=1.11", "httpx>=0.27"]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
packages = ["harness"]
